feat: migrate LOS platform to spring boot and merge worktree